--- a/.github/workflows/system-tests.yml
+++ b/.github/workflows/system-tests.yml
@@ -26,6 +26,10 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: 'DataDog/system-tests'
+      - name: Pull image
+        run: |
+          docker pull ghcr.io/datadog/dd-trace-rb/system-tests/${{ matrix.image }}:latest
+          docker tag ghcr.io/datadog/dd-trace-rb/system-tests/${{ matrix.image }}:latest system_tests/${{ matrix.image }}:latest
       - name: Build image
         run: ./build.sh --images ${{ matrix.image }}
       - name: Export image
@@ -39,6 +43,15 @@ jobs:
           name: docker-image-${{ matrix.image }}-${{ github.run_id }}-${{ github.sha }}
           path: images/*
           retention-days: 1
+      - name: Log in to the Container registry
+        if: ${{ github.ref == 'refs/heads/master' }}
+        run: |
+          echo ${{ secrets.GITHUB_TOKEN }} | docker login ${{ env.REGISTRY }} -u ${{ github.actor }} --password-stdin
+      - name: Push image
+        if: ${{ github.ref == 'refs/heads/master' }}
+        run: |
+          docker tag system_tests/${{ matrix.image }}:latest ghcr.io/datadog/dd-trace-rb/system-tests/${{ matrix.image }}:latest
+          docker push ghcr.io/datadog/dd-trace-rb/system-tests/${{ matrix.image }}:latest
 
   build-apps:
     strategy:
@@ -74,6 +87,10 @@ jobs:
         uses: actions/checkout@v3
         with:
           path: 'binaries/dd-trace-rb'
+      - name: Pull image
+        run: |
+          docker pull ghcr.io/datadog/dd-trace-rb/system-tests/${{ matrix.image }}:${{ matrix.app }}
+          docker tag ghcr.io/datadog/dd-trace-rb/system-tests/${{ matrix.image }}:${{ matrix.app }} system_tests/${{ matrix.image }}
       - name: Log in to the Container registry
         run: |
           echo ${{ secrets.GITHUB_TOKEN }} | docker login ${{ env.REGISTRY }} -u ${{ github.actor }} --password-stdin
@@ -90,6 +107,11 @@ jobs:
           name: docker-image-${{ matrix.image }}-${{ matrix.app }}-${{ github.run_id }}-${{ github.sha }}
           path: images/*
           retention-days: 1
+      - name: Push image
+        if: ${{ github.ref == 'refs/heads/master' }}
+        run: |
+          docker tag system_tests/${{ matrix.image }} ghcr.io/datadog/dd-trace-rb/system-tests/${{ matrix.image }}:${{ matrix.app }}
+          docker push ghcr.io/datadog/dd-trace-rb/system-tests/${{ matrix.image }}:${{ matrix.app }}
 
   test:
     strategy:
