--- a/.gitlab/benchmarks.yml
+++ b/.gitlab/benchmarks.yml
@@ -8,9 +8,12 @@ variables:
 
 .benchmarks:
   stage: benchmarks
-  when: manual
   tags: ["runner:apm-k8s-same-cpu"]
   timeout: 1h
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "schedule"
+      when: always
+    - when: manual
 
   # If you have a problem with Gitlab cache, see Troubleshooting section in Benchmarking Platform docs
   image: $GITLAB_BENCHMARKS_CI_IMAGE
