Disable Rubocop extension suggestion

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -26,6 +26,7 @@ AllCops:
     - 'spec/**/**/interesting_backtrace_helper.rb' # This file needs quite a few bizarre code patterns by design
     - 'vendor/bundle/**/*'
   NewCops: disable # Don't allow new cops to be enabled implicitly.
+  SuggestExtensions: false # Stop pushing suggestions constantly.
 
 Layout/LineLength:
   Max: 124
